# oink

./: CMakeLists.txt
.github/workflows/: build.yml
src/: oink.hpp
tests/: oink.cpp  tests.cpp
